<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/backgroudcor">


    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="306dp"
        android:layout_height="335dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gravidinhaicon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="slogan"
        android:text="@string/slogan"

        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.36" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/checkText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnentrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenhaLogin"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/btncadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="slogan"
        android:onClick="cadastrotela"
        android:text="@string/cadastromsg"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.898" />

    <Button
        android:id="@+id/btnentrar"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/rosagravidinhas"
        android:onClick="back"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <EditText
        android:id="@+id/txtSenhaLogin"
        android:layout_width="363dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="Senha"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnentrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailLogin"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="363dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="Email"
        android:inputType="textCapSentences"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>